@@ -1,5 +1,6 @@
 0.05
  - Improve SYNOPSIS section in doc.
+ - Update Module::Install to 1.21 version.
 
 0.04 2017-11-22T08:53:42+01:00
  - Add test for ok_map_functions().
